dark mode fixes

--- a/components/markdown-styles.module.css
+++ b/components/markdown-styles.module.css
@@ -6,19 +6,23 @@
 .markdown ul,
 .markdown ol,
 .markdown blockquote {
-  @apply mx-auto text-gray-500 leading-snug;
+  @apply mx-auto text-gray-500 dark:text-white dark:opacity-60 leading-snug;
 }
 
 .markdown p + img, .markdown img + img {
   @apply mt-10;
 }
 
+.markdown blockquote {
+  @apply my-10;
+}
+
 .markdown h2 {
-  @apply text-almost-black dark:text-gray-200 text-2xl md:text-3xl mt-12 mb-4 leading-snug;
+  @apply text-almost-black dark:text-white text-2xl md:text-3xl mt-12 mb-4 leading-snug;
 }
 
 .markdown h3 {
-  @apply text-almost-black text-xl md:text-2xl mt-8 mb-4 leading-snug;
+  @apply text-almost-black dark:text-white text-xl md:text-2xl mt-8 mb-4 leading-snug;
 }
 
 .markdown ol {
@@ -47,7 +51,7 @@
 }
 
 .markdownImages h2 {
-  @apply text-army-green dark:text-gray-200 text-3xl mt-12 mb-4 leading-snug;
+  @apply text-army-green dark:text-white dark:opacity-60 text-3xl mt-12 mb-4 leading-snug;
   @apply hidden;
 }
 
